--- a/template/login.html
+++ b/template/login.html
@@ -1,59 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Chat Example</title>
-<style type="text/css">
-html {
-    overflow: hidden;
-}
-
-body {
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    background: gray;
-}
-
-#log {
-    background: white;
-    margin: 0;
-    padding: 0.5em 0.5em 0.5em 0.5em;
-    position: absolute;
-    top: 0.5em;
-    left: 0.5em;
-    right: 0.5em;
-    bottom: 3em;
-    overflow: auto;
-}
-
-#form {
-    padding: 0 0.5em 0 0.5em;
-    margin: 0;
-    position: absolute;
-    bottom: 1em;
-    left: 0px;
-    width: 100%;
-    overflow: hidden;
-}
-
-</style>
+<title>Login in</title>
 </head>
 <body>
     <div id="app">
-        <div id="log">
-            <div v-for="content in contents">{{ content }}</div>
-        </div>
-        <div id="form">
-            <input type="button" @click="submitContent" value="Submit"/>
-            <label for="username">User Name</label>
-            <input type="text" name="username" v-model="username" size="10"/>
-            <input type="text" name="content" v-model="content" size="64"/>
-            <select name="room" v-model="room_id" @change="changeRoom">
-                <option v-for="room in rooms">{{ room }}</option>
-            </select>
-        </div>
+        <div>{{ message }}</div>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -61,55 +13,8 @@ body {
     var app = new Vue({
         el: '#app',
         data: {
-            room_id: 'first',
-            rooms: [
-                'first',
-                'second',
-            ],
-            conn: "",
-            contents: [],
-            username: "",
+            message: 'Please Login!',
         },
-        created: function() {
-            this.websocket_start(this.room_id);
-        },
-        methods: {
-            submitContent: function(){
-                this.conn.send(this.username+':'+this.content);
-            },
-            websocket_close: function(){
-               this.conn.close();
-            },
-            websocket_start: function(room_id){
-                var that = this;
-                if (window["WebSocket"]) {
-                    this.conn = new WebSocket("ws://" + document.location.host + "/ws?room_id=" + room_id);
-                    this.conn.onmessage = function (evt) {
-                        var messages = evt.data.split('\n');
-                        for (var i = 0; i < messages.length; i++) {
-                            that.contents.push(messages[i]);
-                        }
-                    };
-                } else {
-                    var item = document.createElement("div");
-                    item.innerHTML = "<b>Your browser does not support WebSockets.</b>";
-                    this.appendLog(item);
-                }
-            },
-            appendLog: function(item) {
-                var log = document.getElementById("log");
-                var doScroll = log.scrollTop > log.scrollHeight - log.clientHeight - 1;
-                log.appendChild(item);
-                if (doScroll) {
-                    log.scrollTop = log.scrollHeight - log.clientHeight;
-                }
-            },
-            changeRoom: function () {
-                this.contents = [];
-                this.websocket_close();
-                this.websocket_start(this.room_id);
-            }
-        }
     })
 </script>
 </html>
