--- a/template/home.html
+++ b/template/home.html
@@ -56,6 +56,7 @@ body {
         </div>
     </div>
 </body>
+<script src="http://cdn.staticfile.org/jquery/2.1.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script type="text/javascript">
     var app = new Vue({
@@ -67,13 +68,25 @@ body {
                 'second',
             ],
             conn: "",
+            content: "",
             contents: [],
             username: "",
         },
         created: function() {
+            this.get_room_list();
             this.websocket_start(this.room_id);
         },
         methods: {
+            get_room_list: function () {
+                $.ajax("/api/room/list", {
+                    data: {},
+                    dataType: 'json', //要求服务器返回json格式数据
+                    type: 'GET', //HTTP请求类型，要和服务端对应，要么GET,要么POST
+                    success: function(response) {
+                        console.log(response)
+                    }
+                }); //ajax end
+            },
             submitContent: function(){
                 this.conn.send(this.username+':'+this.content);
             },
